--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-get-random-values": "^1.7.0",
     "react-native-reanimated": "^2.1.0",
